fixed horizontal scroll everywhere but on the iphone 5

--- a/src/App.css
+++ b/src/App.css
@@ -45,10 +45,6 @@
   color: #888;
 }
 
-.hover\:w-48:hover + .flex-grow {
-  margin-left: 12rem; /* Width of expanded navbar */
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
